--- a/myApp/views/index.jade
+++ b/myApp/views/index.jade
@@ -1,5 +1,36 @@
 extends layout
 
 block content
-  h1= title
-  p Welcome to #{title}
+  nav.navbar.navbar-inverse
+    .container-fluid
+      .navbar-header
+        button.navbar-toggle.collapsed(type='button', data-toggle='collapse', data-target='#bs-example-navbar-collapse-1', aria-expanded='false')
+          span.sr-only Toggle navigation
+          span.icon-bar
+          span.icon-bar
+          span.icon-bar
+        a.navbar-brand(href='#') My App
+      #bs-example-navbar-collapse-1.collapse.navbar-collapse
+        ul.nav.navbar-nav.navbar-right
+          li
+            a(href='/signin') Sign In
+  .container
+    .page-header
+      h1 Welcome! 
+        small Please register or sign in
+    .col-md-6.col-md-offset-3
+      include errors
+      form.form-group(action='/register' method='post')
+        label(for='email')
+          i(class='glyphicon glyphicon-envelope')
+          strong   Email
+        input.form-control(type='email' name='email' id='email')
+        label(for='password')
+          i(class="fa fa-unlock-alt")
+          strong   Password
+        input.form-control(type='password' name='password' id='password')
+        label(for='password-confirmation') 
+          i(class='glyphicon glyphicon-ok')
+          strong   Password Confirmation
+        input.form-control(type='password' name='password_confirmation' id='password-confirmation')
+        button.btn.btn-primary(type='submit') Register
