--- a/myApp/views/index.jade
+++ b/myApp/views/index.jade
@@ -17,7 +17,7 @@ block content
   .container
     .page-header
       h1 Welcome! 
-        small Please register or sign in
+        small.text-info Please register or sign in
     .col-md-6.col-md-offset-3
       include errors
       form.form-group(action='/register' method='post')
