--- a/myApp/views/signin.jade
+++ b/myApp/views/signin.jade
@@ -16,7 +16,7 @@ block content
   .container
     .page-header
       h1 Sign In 
-        small sign in to see student list
+        small.text-warning to see student list
     .row
       .col-md-6.col-md-offset-3
         include errors
