--- a/myApp/public/stylesheets/style.css
+++ b/myApp/public/stylesheets/style.css
@@ -1,11 +1,21 @@
 body {
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  font-size: 16px;
+  font-family: 'Quicksand', sans-serif;
 }
 
 a {
   color: #00B7FF;
+  font-size: 16px;
 }
 
 label, button {
   margin-top: 20px;
+}
+
+label, table, .table {
+  font-size: 16px;
+}
+
+nav {
+  padding-top: 10px;
 }
