--- a/myApp/views/layout.jade
+++ b/myApp/views/layout.jade
@@ -4,6 +4,7 @@ html
     title= title
     link(rel='stylesheet', href='http://bootswatch.com/superhero/bootstrap.min.css')
     link(rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css")
+    link(href='https://fonts.googleapis.com/css?family=Quicksand' rel='stylesheet' type='text/css')
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
     block content
